MINOR - Tweaks to presentation text, and fixed some errors on what layers were visible

--- a/css/style.css
+++ b/css/style.css
@@ -140,16 +140,16 @@ p {
 .neighborhoodroadfont {color: #62adf3; font-weight:bold;}
 .lowstressfont {color: #76a4e0; font-weight:bold;}
 
-#satallitebikelanes {
-    color:white;
-    /*background-color: rgb(0,0,0,0.4); */
-    padding: 10px;}
-
 #text > section {
     background-color: rgb(255,255,255,0.5);
     padding: 10px;
     border: solid 3px #A0A0A0;
 }
+
+#text > #satallitebikelanes, #text > #satallite {
+    color:white;
+    background-color: rgb(0,0,0,0.3);
+    }
 
 section {
     margin-bottom:100vh;
